--- a/dashboard/src/stylesheets/index.css
+++ b/dashboard/src/stylesheets/index.css
@@ -29,6 +29,11 @@
   --color-2-shade: #191431;
   /* --color-2-fade: #191431b9; */
 
+  --color-2: #083a50;
+  --color-2-tint: #165975;
+  --color-2-shade: #032430;
+  --color-2-fade: #19191a80;
+
   /* --color-2: #560319;
   --color-2-shade: #30020e; */
 
@@ -57,6 +62,25 @@
   --grid-hor-color: #e6e6e6;
   /* --grid-hor-color: #f0f0f0;
   --grid-hor-color: #d6d6d652; */
+}
+
+.icon.icon-desktop {
+  -webkit-mask-image: url(/static/media/desktop.ae5e91df.svg);
+  mask-image: url(/static/media/desktop.ae5e91df.svg);
+}
+
+.icon {
+  --size: var(--icon-size,1rem);
+  background-color: #303074;
+  display: inline-block;
+  height: var(--size);
+  width: var(--size);
+  vertical-align: middle;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  flex-shrink: 0;
 }
 
 body {
@@ -147,8 +171,9 @@ body {
 .nav-link:hover,
 .nav-link:focus,
 .nav-link.active {
-  /* color: inherit; */
-  color: var(--color-3);
+  color: inherit;
+  color: var(--color-2-tint);
+  /* color: var(--color-3); */
   /* background: none; */
   /* text-decoration: none; */
   /* opacity: 0.9; */
@@ -205,21 +230,21 @@ body {
 
 .btn-main {
   background-color: var(--color-2);
-  background-image: linear-gradient(180deg, var(--color-2) 0%, var(--color-2-shade) 100%);
+  background-image: linear-gradient(180deg, var(--color-2-tint) 0%, var(--color-2-shade) 100%);
   color: var(--color-1);
   border: 1px solid var(--color-2);
 }
 
 .btn-accent {
   background-color: var(--color-3);
-  background-image: linear-gradient(180deg, var(--color-3) 0%, var(--color-3-shade) 100%);
+  background-image: linear-gradient(180deg, var(--color-3-tint) 0%, var(--color-3-shade) 100%);
   color: var(--color-1);
   border: 1px solid var(--color-3);
 }
 
 .btn-white {
   background-color: var(--color-1);
-  background-image: linear-gradient(180deg, var(--color-1) 0%, var(--color-1-shade) 100%);
+  background-image: linear-gradient(180deg, var(--color-1-tint) 0%, var(--color-1-shade) 100%);
   color: var(--text-primary);
   border: 1px solid var(--color-1);
 }
@@ -271,6 +296,11 @@ body {
   max-width: 400px;
 }
 
+.form-check-input:checked {
+  background-color: var(--color-2);
+  border-color: var(--color-2);
+}
+
 .alert {
   min-height: 80px;
 }
@@ -290,7 +320,7 @@ body {
 
 .img-preview {
   position: relative;
-  height: 300px;
+  /* height: 300px; */
   max-width: 300px;
   margin: auto;
 }
