--- a/dashboard/views/includes/mobile-menu.pug
+++ b/dashboard/views/includes/mobile-menu.pug
@@ -1,5 +1,5 @@
 .container-fluid.p-0
-  ul( class="nav theme-bg text-center justify-content-around justify-content-evenly lh-1")
+  ul( class="nav theme-bg small text-center justify-content-around justify-content-evenly lh-1")
     li( class="nav-item")
       a( href="/manage" class="nav-link" aria-current="page" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home")
         <svg width="1.5em" height="1.5em" fill="currentColor" class="bi mb-2" viewBox="0 0 16 16">
@@ -16,6 +16,25 @@
         div.small Estates
 
     li( class="nav-item")
+      a( href="/manage/users" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers")
+        <svg width="1.5em" height="1.5em" fill="currentColor" class="bi mb-2" viewBox="0 0 16 16">
+          <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+          <path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
+          <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
+        </svg>
+        div.small Users
+
+    li( class="nav-item")
+      //- a( href="/auth/logout" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers")a(class="nav-link dashboard-link" href=`${verified ? "/auth/logout" : "/auth/login"}`)
+      a( href=`${verified ? `/auth/logout?returnTo=${hostUrl}/manage/login` : "/manage/login"}` class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers")
+        <svg width="1.5em" height="1.5em" fill="currentColor" class="bi mb-2" viewBox="0 0 16 16">
+          <path d="M7.5 1v7h1V1h-1z"/>
+          <path d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z"/>
+        </svg>
+        //- div.small Logout
+        div.small #{verified ? "Logout" : "Login"}
+
+    //- li( class="nav-item")
       a( href="/manage/estates" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard")
         <svg width="1.5em" height="1.5em" fill="currentColor" class="bi mb-2" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z"/>
@@ -31,12 +50,14 @@
         </svg>
         div.small Subscribers
 
-    li( class="nav-item")
+    //- li( class="nav-item")
       a( href="/manage/estates" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers")
         <svg width="1.5em" height="1.5em" fill="currentColor" class="bi mb-2" viewBox="0 0 16 16">
           <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
         </svg>
         div.small More
+
+
 
   //- div( class="dropdown border-top")
     a( href="/manage/estates" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false")
