--- a/dashboard/views/layout.pug
+++ b/dashboard/views/layout.pug
@@ -3,12 +3,12 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    meta(name="description" content="A restaurant review app.")
-    //- link(rel="stylesheet", href="/manage/stylesheets/bootstrap.min.css")
-    //- link(rel='stylesheet', href='/manage/stylesheets/style.css')
-    link(rel="stylesheet", href="/manage/stylesheets/bootstrap.css")
-    link(rel='stylesheet', href='/manage/stylesheets/index.css')
-    link(rel='stylesheet', href='/manage/stylesheets/animate.css')
+    //- meta(name="description" content="A real estate consultancy")
+    //- link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+    //- link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="/stylesheets/bootstrap.css")
+    link(rel='stylesheet', href='/stylesheets/index.css')
+    //- link(rel='stylesheet', href='/stylesheets/animate.css')
     title Stella Eban Consulting
 
   //- body
@@ -37,6 +37,12 @@ html(lang="en")
         // Main Content
         main(id="main-content" class="col-md-10 col-xl-10 site-main p-0 position-relative ms-auto" role="main")
           //- div(class="content-wrapper")
+          if user
+            div.ps-3.theme-bg
+              p
+                span.text-capitalize   #{user.firstName || ""} #{user.lastName || ""}
+                //- span.text-lowercase=   ` (${user.email})`
+
           block content
 
     //- div(id="msg-box" class="alert small p-2 fade-in m-0 d-none" role="alert" aria-live="assertive")
@@ -53,5 +59,5 @@ html(lang="en")
   // Scripts
 
   // build:js manage/scripts/index.min.js defer
-  script(src="/manage/scripts/index.js" defer)
+  script(src="/scripts/index.js" defer)
   // endbuild
