--- a/dashboard/views/mixins/_userCard.pug
+++ b/dashboard/views/mixins/_userCard.pug
@@ -1,35 +1,38 @@
-mixin estateCard(estate)
-  //- div(class="col estate-item" data-id=estate.id)
-  div(id=estate.id class="col estate-item")
+mixin userCard(userItem)
+  //- div(class="col user-item" data-id=userItem.id)
+  div(id=userItem.id class="col user-item")
     //- div(class="card h-100")
     div(class="card h-100")
       div(class="card-body animate_animated animate_bounceIn")
         ul(class="list-group list-group-flush")
-          each value, key in estate
-            //- Do not list the 'id' field
-            if (key !=="id" && key!=="photos" && key!=="createdAt")
+          each value, key in userItem
+            if (key !=="id" && key!=="createdAt" && key!=="updatedAt")
               li.list-group-item
                 div.text-secondary.small.text-uppercase      #{key}
                 div.text-success.fs-5     #{value || "-"}
-                //- if key=="poster"
-                //-   div.text-success
-                //-     a(class="link" href=`${value.url}`)    #{value.tag} image
-                //- else
-                //-   div.text-success                       #{value}
+
+            if (key=="createdAt")
+              li.list-group-item
+                div.text-secondary.small.text-uppercase      Created
+                div.text-success.fs-5        #{new Date(value).toLocaleString()}
+
+            if (key=="updatedAt")
+              li.list-group-item
+                div.text-secondary.small.text-uppercase      Updated
+                div.text-success.fs-5        #{new Date(value).toLocaleString()}
+
 
       //- div(class="card-footer text-center border-0 p-1")
       div(class="text-center p-2")
         .btn-group
-          //- button(data-uri=`./estates/${estate.id}` data-action="" class="btn btn-main btn-white" title="View Details")
-          a(class="btn btn-main btn-white" href=`./estates/${estate.id}` title="View Details")
+          a(class="btn btn-main btn-white" href=`./users/${userItem.id}` title="View Details")
             <svg width="1.5em" height="1.5em" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" focusable="false">
               <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
               <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
             </svg>
             span(class="visually-hidden")  View Details
 
-          //- button(class="btn btn-main btn-white" data-uri=`./estates/edit/:${estate.id}` data-action="" title="Edit")
-          a(class="btn btn-main btn-white" href=`./edit-estate/${estate.id}` title="Edit")
+          a(class="btn btn-main btn-white" href=`./edit-user/${userItem.id}` title="Edit")
             <svg width="1.5em" height="1.5em" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" focusable="false">
               <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
             </svg>
@@ -38,14 +41,8 @@ mixin estateCard(estate)
             //- </svg>
             span(class="visually-hidden")  Edit
 
-          //- button(data-uri=`./estates/${estate.id}` data-action="" class="btn btn-main btn-white" title="")
-            <svg width="1.5em" height="1.5em" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" focusable="false">
-              <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0z"/>
-            </svg>
-            span(class="visually-hidden")  Edit
-
           if (user.role == 'owner' || user.role == 'admin')
-            button(class="btn btn-main btn-white menu-btn" data-id=estate.id data-uri=`/v1/estates/${estate.id}` data-method="DELETE" title="Delete")
+            button(class="btn btn-main btn-white menu-btn" data-id=userItem.id data-uri=`/v1/users/${userItem.id}` data-method="DELETE" title="Delete")
               <svg width="1.5em" height="1.5em" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" focusable="false">
                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                 <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
