--- a/dashboard/views/pages/img-add.pug
+++ b/dashboard/views/pages/img-add.pug
@@ -11,12 +11,12 @@ block content
   // Image Upload
   section.section
     .container.img-container
-      a(href=`/manage/estates/${_id}` class="btn btn-main" title="Back to Estates")
+      a(href=`/manage/estates/${id}` class="btn btn-main" title="Back to Estates")
         <svg width="2em" height="2em" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true" focusable="false">
           <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
           <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
         </svg>
-        span(class="align-middle")  Back
+        span(class="align-middle") Back to estate
 
       //- .text-center.mt-5
       // Image Form
@@ -24,16 +24,16 @@ block content
         id="img-form"
         class="form text-center mt-5"
         data-method="POST"
-        data-uri=`/api/v1/estates/${_id}/images`
+        data-uri=`/v1/estates/${id}/images`
       )
-        .card.py-2
+        .card.py-3.px-2.px-sm-0
           .form-container.m-auto
             p.small.mb-4.text-muted.fst-italic  * = Required
 
             // image preview
             figure.img-preview.bg-secondary
               //- img(id="img-preview" class="img-thumbnail rounded-top" width="300" height="300")
-              img(id="img-preview" class="img-thumbnail rounded-top")
+              img(id="img-preview" class="img-thumbnail rounded-top" width="300" height="300")
               //- figcaption.vertical-text.d-inline-block      Image Preview
               figcaption.vertical-text      Image Preview
 
